--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
     <script src="./lib/datePicker/source/Picker.Date.js" type="text/javascript"></script>
 
     <script src="./js/form.js" type="text/javascript"></script>
-
+    <script type="text/javascript">
+    $(document).ready(function() {
+        //Date.defineFormat('dddmmyyy', '%d/%m/%Y');
+        new Picker.Date($$('.date'), {
+            timePicker: false,
+            positionOffset: {
+                x: 5,
+                y: 0
+            },
+            pickerClass: 'datepicker_dashboard',
+            useFadeInOut: !Browser.ie,
+            draggable: false
+        })
+    });
+    </script>
 
 </head>
 
