--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./lib/bootstrap-3.2.0-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="./lib/bootstrap.min.css"> -->
-
+    <link rel="icon" type="image/png" href="./images/favicon.jpg">
 
     <link href="./lib/datePicker/source/datepicker_dashboard/datepicker_dashboard.css" rel="stylesheet">
 
@@ -16,6 +16,7 @@
     <script src="./lib/datePicker/mootools-more.js" type="text/javascript"></script>
 
     <script type="text/javascript" src="./lib/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="./lib/handlebars-v2.0.0.js"></script>
     <script type="text/javascript" src="./lib/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
 
     <script src="./lib/datePicker/source/Locale.en-US.DatePicker.js" type="text/javascript"></script>
@@ -44,39 +45,39 @@
 
 <body>
     <div class="container">
-        <div class="navbar navbar-inverse">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Brand</a>
-            </div>
-            <div class="navbar-collapse collapse navbar-inverse-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Active</a>
-                    </li>
-                    <li><a href="#">Link</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        <!--   <div class="navbar navbar-inverse">
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Brand</a>
+          </div>
+          <div class="navbar-collapse collapse navbar-inverse-collapse">
+              <ul class="nav navbar-nav">
+                  <li class="active"><a href="#">Active</a>
+                  </li>
+                  <li><a href="#">Link</a>
+                  </li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#">Link</a>
+                  </li>
+              </ul>
+          </div>
+      </div> -->
 
 
         <div class="row body-content">
-            <div class="col-lg-4 visible-lg">
+            <!-- <div class="col-lg-4 visible-lg">
                 <div class="well round-corner-left">
-                    <div class="image-container"></div>
+                    <div class="image-container"><img src="./images/ka.jpg"></div>
                 </div>
-            </div>
-            <div class="col-lg-8">
+            </div> -->
+            <div class="col-lg-offset-1 col-lg-10 well2">
                 <div class="well round-corner-right">
-                    <form class="form-horizontal">
+                    <form class="form-horizontal" method="POST">
                         <fieldset>
                             <legend>
                                 <div class="col-sm-offset-1">Legend</div>
@@ -86,7 +87,7 @@
                                     <div class="form-group">
                                         <label for="candidate_f_name" class="col-lg-4 control-label">First Name</label>
                                         <div class="col-lg-8">
-                                            <input type="text" class="form-control" id="candidate_f_name" placeholder="Candidate's First Name">
+                                            <input type="text" class="form-control" id="candidate_f_name" placeholder="Candidate's First Name" required>
                                         </div>
                                     </div>
                                 </div>
@@ -95,7 +96,7 @@
                                     <div class="form-group">
                                         <label for="candidate_l_name" class="col-lg-4 control-label">Last Name</label>
                                         <div class="col-lg-8">
-                                            <input type="text" class="form-control" id="candidate_l_name" placeholder="Candidate's Last Name">
+                                            <input type="text" class="form-control" id="candidate_l_name" placeholder="Candidate's Last Name" required>
                                         </div>
                                     </div>
                                 </div>
@@ -128,7 +129,7 @@
                                     <div class="form-group">
                                         <label for="candidate_dob" class="col-lg-4 control-label">Date Of Birth</label>
                                         <div class="col-lg-8">
-                                            <input type="text" class="form-control date" id="candidate_dob" placeholder="DD/MM/YYYY">
+                                            <input type="text" class="form-control date" id="candidate_dob" placeholder="DD/MM/YYYY" required>
                                         </div>
                                     </div>
                                 </div>
@@ -138,7 +139,7 @@
                                         <label for="candidate_weight" class="col-lg-4 control-label">Weight</label>
                                         <div class="col-lg-8">
                                             <div class="input-group">
-                                                <input type="text" class="form-control" id="candidate_weight" placeholder="Ex : 50.58">
+                                                <input type="text" class="form-control" id="candidate_weight" placeholder="Ex : 50.58" required>
                                                 <span class="input-group-addon">Kg</span>
                                             </div>
                                         </div>
@@ -161,75 +162,13 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-6 for-india">
-                                    <div class="form-group">
-                                        <label for="select" class="col-lg-4 control-label">State</label>
-                                        <div class="col-lg-8">
-                                            <select class="form-control" id="state">
-                                                <option value="default" selected="">-Select-</option>
-                                                <option value="AN">Andaman and Nicobar Islands</option>
-                                                <option value="AP">Andhra Pradesh</option>
-                                                <option value="AR">Arunachal Pradesh</option>
-                                                <option value="AS">Assam</option>
-                                                <option value="BR">Bihar</option>
-                                                <option value="CH">Chandigarh</option>
-                                                <option value="CT">Chhattisgarh</option>
-                                                <option value="DN">Dadra and Nagar Haveli</option>
-                                                <option value="DD">Daman and Diu</option>
-                                                <option value="DL">Delhi</option>
-                                                <option value="GA">Goa</option>
-                                                <option value="GJ">Gujarat</option>
-                                                <option value="HR">Haryana</option>
-                                                <option value="HP">Himachal Pradesh</option>
-                                                <option value="JK">Jammu and Kashmir</option>
-                                                <option value="JR">Jharkhand</option>
-                                                <option value="KA">Karnataka</option>
-                                                <option value="KL">Kerala</option>
-                                                <option value="LD">Lakshadweep</option>
-                                                <option value="MP">Madhya Pradesh</option>
-                                                <option value="MH">Maharashtra</option>
-                                                <option value="MN">Manipur</option>
-                                                <option value="ML">Meghalaya</option>
-                                                <option value="MZ">Mizoram</option>
-                                                <option value="NL">Nagaland</option>
-                                                <option value="OR">Orissa</option>
-                                                <option value="PY">Pondicherry</option>
-                                                <option value="PB">Punjab</option>
-                                                <option value="RJ">Rajasthan</option>
-                                                <option value="SK">Sikkim</option>
-                                                <option value="TN">Tamil Nadu</option>
-                                                <option value="TE">Telangana</option>
-                                                <option value="TR">Tripura</option>
-                                                <option value="UL">Uttaranchal</option>
-                                                <option value="UP">Uttar Pradesh</option>
-                                                <option value="WB">West Bengal</option>
-                                            </select>
-                                        </div>
-                                    </div>
+                                <div class="col-sm-6 states-selection">
+
                                 </div>
                             </div>
 
-                            <div class="row  for-india">
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label for="club_name" class="col-lg-4 control-label">Club</label>
-                                        <div class="col-lg-8">
-                                            <select class="form-control" id="club" required>
-                                                <option value="" selected>-select-</option>
-                                                <option value="Others">Others</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="club-selection row">
 
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label for="club_name_other" class="col-lg-1 control-label">&nbsp;</label>
-                                        <div class="col-lg-11">
-                                            <input type="text" class="form-control" id="club_name_other">
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
 
                             <div class="form-group">
@@ -239,14 +178,14 @@
                                         <div class="col-sm-6">
                                             <div class="checkbox">
                                                 <label>
-                                                    <input type="checkbox" name="sex" id="event1" value="1">Event1
+                                                    <input type="checkbox" name="events" id="kata" value="kata">Kata
                                                 </label>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="checkbox">
                                                 <label>
-                                                    <input type="checkbox" name="sex" id="event2" value="2">Event2
+                                                    <input type="checkbox" name="events" id="kumite" value="kumite">Kumite
                                                 </label>
                                             </div>
                                         </div>
@@ -255,14 +194,14 @@
                                         <div class="col-sm-6">
                                             <div class="checkbox">
                                                 <label>
-                                                    <input type="checkbox" name="sex" id="event3" value="3">Event3
+                                                    <input type="checkbox" name="events" id="weapons" value="weapons">Weapons
                                                 </label>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="checkbox">
                                                 <label>
-                                                    <input type="checkbox" name="sex" id="event4" value="4">Event4
+                                                    <input type="checkbox" name="events" id="team_kata" value="team_kata">Team Kata
                                                 </label>
                                             </div>
                                         </div>
@@ -275,7 +214,7 @@
                                     <div class="form-group">
                                         <label for="candidate_mo_num" class="col-lg-4 control-label">Contact No.</label>
                                         <div class="col-lg-8">
-                                            <input type="text" class="form-control" id="candidate_mo_num" placeholder="Ex. +91-1234567890">
+                                            <input type="text" class="form-control" id="candidate_mo_num" placeholder="Ex. +91-1234567890" required>
                                         </div>
                                     </div>
                                 </div>
@@ -293,7 +232,7 @@
                             <div class="form-group">
                                 <label for="textArea" class="col-lg-2 control-label">Address</label>
                                 <div class="col-lg-10">
-                                    <textarea class="form-control" rows="4" id="address"></textarea>
+                                    <textarea class="form-control" rows="4" id="address" required></textarea>
                                     <span class="help-block">Enter proper mailing address</span>
                                 </div>
                             </div>
@@ -310,6 +249,77 @@
         </div>
 
     </div>
+    <script class="club-select-template" type="text/x-handlebars-template">
+        <div class="col-sm-6">
+            <div class="form-group">
+                <label for="club_name" class="col-lg-4 control-label">Club</label>
+                <div class="col-lg-8">
+                    <select class="form-control" id="club" required>
+                        <option value="" selected>-select-</option>
+                        <option value="Others">Others</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6 club-input">
+
+        </div>
+    </script>
+    <script class="club-input-template" type="text/x-handlebars-template">
+        <div class="form-group">
+            <label for="club_name_other" class="col-lg-1 control-label">&nbsp;</label>
+            <div class="col-lg-11">
+                <input type="text" class="form-control" id="club_name_other" placeholder="Enter Your Club Name">
+            </div>
+        </div>
+    </script>
+    <script class="states-selection-template" type="text/x-handlebars-template">
+        <div class="form-group">
+            <label for="select" class="col-lg-4 control-label">State</label>
+            <div class="col-lg-8">
+                <select class="form-control" id="state" required>
+                    <option value="default" selected="">-Select-</option>
+                    <option value="AN">Andaman and Nicobar Islands</option>
+                    <option value="AP">Andhra Pradesh</option>
+                    <option value="AR">Arunachal Pradesh</option>
+                    <option value="AS">Assam</option>
+                    <option value="BR">Bihar</option>
+                    <option value="CH">Chandigarh</option>
+                    <option value="CT">Chhattisgarh</option>
+                    <option value="DN">Dadra and Nagar Haveli</option>
+                    <option value="DD">Daman and Diu</option>
+                    <option value="DL">Delhi</option>
+                    <option value="GA">Goa</option>
+                    <option value="GJ">Gujarat</option>
+                    <option value="HR">Haryana</option>
+                    <option value="HP">Himachal Pradesh</option>
+                    <option value="JK">Jammu and Kashmir</option>
+                    <option value="JR">Jharkhand</option>
+                    <option value="KA">Karnataka</option>
+                    <option value="KL">Kerala</option>
+                    <option value="LD">Lakshadweep</option>
+                    <option value="MP">Madhya Pradesh</option>
+                    <option value="MH">Maharashtra</option>
+                    <option value="MN">Manipur</option>
+                    <option value="ML">Meghalaya</option>
+                    <option value="MZ">Mizoram</option>
+                    <option value="NL">Nagaland</option>
+                    <option value="OR">Orissa</option>
+                    <option value="PY">Pondicherry</option>
+                    <option value="PB">Punjab</option>
+                    <option value="RJ">Rajasthan</option>
+                    <option value="SK">Sikkim</option>
+                    <option value="TN">Tamil Nadu</option>
+                    <option value="TE">Telangana</option>
+                    <option value="TR">Tripura</option>
+                    <option value="UL">Uttaranchal</option>
+                    <option value="UP">Uttar Pradesh</option>
+                    <option value="WB">West Bengal</option>
+                </select>
+            </div>
+        </div>
+    </script>
 </body>
 
 </html>
